--- a/src/shared/styles/colors/colors.scss
+++ b/src/shared/styles/colors/colors.scss
@@ -3,5 +3,8 @@ $colorDark: #333333;
 $colorPrimary: #007AFF;
 $colorSecondary: #5B969C;
 $colorNeutral: #DBB8AA;
-$colorYellow: #EFCD52;
+$colorYellow: #ffd331;
 $colorLight: #FDF9F6;
+
+
+$colorYellowHover: #EFCD52;
