--- a/src/shared/styles/sizes/sizes.scss
+++ b/src/shared/styles/sizes/sizes.scss
@@ -7,6 +7,7 @@ $spacingLg: 16px;
 $spacingXl: 20px;
 $spacing2Xl: 24px;
 $spacing3Xl: 32px;
+$spacing4Xl: 48px;
 
 
 // Font Sizes
@@ -24,6 +25,14 @@ $fontSize3Xl: 32px;
 $fontSize4Xl: 48px;
 $fontSize5Xl: 64px;
 
+
+// Font Weight
+
+$fontWeightLight: 300;
+$fontWeightRegular: 400;
+$fontWeightMedium: 400;
+$fontWeightSemiBold: 600;
+$fontWeightBold: 700;
 
 // Border Radiuses
 
