--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,5 +1,38 @@
+@import "/src/shared/styles/variables.scss";
+
+.bannerWrapper {
+    position: relative;
+}
+
 .bannerImage {
     width: 100%;
-    height: 90vh;
+    height: 70vh;
     object-fit: cover;
+    object-position: 20%;
+
+    @media screen and (min-width: 752px) {
+        height: 90vh;
+    }
+}
+
+.bannerTextWrapper {
+    position: absolute;
+    width: 60%;
+    bottom: 35%;
+    left: 10%;
+    z-index: 3;
+
+    @media screen and (min-width: 752px) {
+        width: 50%;
+        bottom: 45%;
+    }
+}
+
+.bannerText {
+    margin-bottom: $spacingXl;
+    text-shadow: 1px 1px 0 rgba(0, 0, 0);
+
+    @media screen and (min-width: 752px) {
+        margin-bottom: $spacing2Xl;
+    }
 }
