--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,7 +1,9 @@
 @import "/src/shared/styles/variables.scss";
 
-.bannerWrapper {
+.bannerWrapper,
+.servicesWrapper {
     position: relative;
+    margin-bottom: $spacing4Xl;
 }
 
 .bannerImage {
@@ -10,7 +12,7 @@
     object-fit: cover;
     object-position: 20%;
 
-    @media screen and (min-width: 752px) {
+    @media screen and (min-width: 768px) {
         height: 90vh;
     }
 }
@@ -22,9 +24,10 @@
     left: 10%;
     z-index: 3;
 
-    @media screen and (min-width: 752px) {
+    @media screen and (min-width: 768px) {
         width: 50%;
         bottom: 45%;
+        left: 15%;
     }
 }
 
@@ -32,7 +35,7 @@
     margin-bottom: $spacingXl;
     text-shadow: 1px 1px 0 rgba(0, 0, 0);
 
-    @media screen and (min-width: 752px) {
+    @media screen and (min-width: 768px) {
         margin-bottom: $spacing2Xl;
     }
 }
