--- a/src/components/HomePage/Services/services.module.scss
+++ b/src/components/HomePage/Services/services.module.scss
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     gap: $spacing3Xl;
 }
 
