--- a/src/shared/styles/sizes/sizes.scss
+++ b/src/shared/styles/sizes/sizes.scss
@@ -8,7 +8,8 @@ $spacingXl: 20px;
 $spacing2Xl: 24px;
 $spacing3Xl: 32px;
 $spacing4Xl: 48px;
-
+$spacing5Xl: 60px;
+$spacing6Xl: 72px;
 
 // Font Sizes
 
@@ -24,6 +25,7 @@ $fontSize2Xl: 30px;
 $fontSize3Xl: 32px;
 $fontSize4Xl: 48px;
 $fontSize5Xl: 64px;
+$fontSize6Xl: 72px;
 
 
 // Font Weight
