--- a/src/components/Footer/Contact/contact.module.scss
+++ b/src/components/Footer/Contact/contact.module.scss
@@ -19,4 +19,10 @@
     display: flex;
     gap: $spacingLg;
     padding: $spacingLg;
+    align-items: center;
+
+    img {
+        height: auto;
+        width: 25px;
+    }
 }
