--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,7 +1,8 @@
 @import "/src/shared/styles/variables.scss";
 
 .bannerWrapper,
-.aboutMeWrapper {
+.aboutMeWrapper,
+.uspWrapper {
     position: relative;
     margin-bottom: $spacing4Xl;
 }
