--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -2,10 +2,10 @@
 
 .footerContent {
     background-color: $colorNeutral;
-    padding: $spacing4Xl $spacing4Xl $spacing3Xl $spacing4Xl;
+    padding: $spacing4Xl 7% $spacing3Xl 7%;
 
     @media screen and (min-width: 768px) {
-        padding: $spacing4Xl $spacing4Xl $spacing3Xl $spacing4Xl;
+        padding: $spacing4Xl 10% $spacing3Xl 10%;
     }
 }
 
