--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,7 +2,8 @@
 
 .bannerWrapper,
 .aboutMeWrapper,
-.uspWrapper {
+.uspWrapper,
+.featuresWrapper {
     position: relative;
     margin-bottom: $spacing4Xl;
 }
@@ -13,39 +14,5 @@
 
     @media screen and (min-width: 768px) {
         margin-bottom: 80px;
-    }
-}
-
-.bannerImage {
-    width: 100%;
-    height: 70vh;
-    object-fit: cover;
-    object-position: 20%;
-
-    @media screen and (min-width: 768px) {
-        height: 90vh;
-    }
-}
-
-.bannerTextWrapper {
-    position: absolute;
-    width: 60%;
-    bottom: 35%;
-    left: 10%;
-    z-index: 3;
-
-    @media screen and (min-width: 768px) {
-        width: 50%;
-        bottom: 45%;
-        left: 15%;
-    }
-}
-
-.bannerText {
-    margin-bottom: $spacingXl;
-    text-shadow: 1px 1px 0 rgba(0, 0, 0);
-
-    @media screen and (min-width: 768px) {
-        margin-bottom: $spacing2Xl;
     }
 }
