--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -2,7 +2,7 @@
 
 .footerContent {
     background-color: $colorNeutral;
-    padding: $spacing4Xl 7% $spacing3Xl 7%;
+    padding: $spacing4Xl 5% $spacing3Xl 5%;
 
     @media screen and (min-width: 768px) {
         padding: $spacing4Xl 10% $spacing3Xl 10%;
@@ -17,7 +17,7 @@
 
     @media screen and (min-width: 768px) {
         justify-content: flex-start;
-        padding: 0 60px;
+        padding: 0;
     }
 }
 
@@ -27,7 +27,7 @@
 
     @media screen and (min-width: 768px) {
         flex-direction: row;
-        padding: 0 $spacing4Xl;
+        padding: 0;
 
     }
 }
