--- a/src/components/HomePage/AboutMe/aboutme.module.scss
+++ b/src/components/HomePage/AboutMe/aboutme.module.scss
@@ -29,10 +29,10 @@
 .aboutMeImage {
     width: 220px;
     height: 300px;
-    object-fit: none;
+    object-fit: cover;
     position: absolute;
     top: 0;
-    transform: translateY(-30%);
+    transform: translate(-50%, -30%);
     border-radius: 30px;
 
     @media screen and (min-width: 768px) {
