Blog List Page is done

--- a/src/components/Services/Service/service.module.scss
+++ b/src/components/Services/Service/service.module.scss
@@ -6,7 +6,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  background-color: $colorSecondary;
+  background-color: $colorLight;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
   @media screen and (min-width: 768px) {
     padding: $spacing4Xl;
