--- a/src/components/Shared/Typography/typography.module.scss
+++ b/src/components/Shared/Typography/typography.module.scss
@@ -20,6 +20,14 @@
     color: $colorSecondary;
 }
 
+.text-gray {
+    color: $colorGray;
+}
+
+.text-lightGray {
+    color: $colorLightGray;
+}
+
 .text-light {
     font-weight: 300;
 }
