--- a/src/shared/styles/colors/colors.scss
+++ b/src/shared/styles/colors/colors.scss
@@ -6,5 +6,8 @@ $colorNeutral: #DBB8AA;
 $colorYellow: #ffd331;
 $colorLight: #FDF9F6;
 
+$colorGray: #555555;
+$colorLightGray: #757575;
+
 
 $colorYellowHover: #EFCD52;
