--- a/src/app/hakkimda/about.module.scss
+++ b/src/app/hakkimda/about.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 0;
+    margin-bottom: $spacing5Xl;
 
     @media screen and (min-width: 768px) {
         flex-direction: row;
