--- a/src/shared/styles/colors/colors.scss
+++ b/src/shared/styles/colors/colors.scss
@@ -1,13 +1,12 @@
 $colorBlack: #000000;
 $colorDark: #333333;
-$colorPrimary: #007AFF;
-$colorSecondary: #5B969C;
-$colorNeutral: #DBB8AA;
+$colorPrimary: #007aff;
+$colorSecondary: #5b969c;
+$colorNeutral: #dbb8aa;
 $colorYellow: #ffd331;
-$colorLight: #FDF9F6;
+$colorLight: #fdf9f6;
 
 $colorGray: #555555;
 $colorLightGray: #757575;
 
-
-$colorYellowHover: #EFCD52;
+$colorYellowHover: #efcd52;
