--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,92 +1,91 @@
 @import "/src/shared/styles/variables.scss";
 
 .headerWrapper {
-    position: relative;
-    top: 0;
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-    background: $colorLight;
-    box-shadow: 0px 16px 20px -12px rgba(0, 0, 0, 0.5);
-    z-index: 5;
-    flex-direction: column;
-    padding: $spacingXl 10%;
-    align-items: flex-start;
+  position: relative;
+  top: 0;
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  background: $colorLight;
+  box-shadow: 0px 16px 20px -12px rgba(0, 0, 0, 0.5);
+  z-index: 5;
+  flex-direction: column;
+  padding: $spacingXl 10%;
+  align-items: flex-start;
 
-    @media screen and (min-width: 768px) {
-        flex-direction: row;
-        align-items: center;
-    }
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    align-items: center;
+  }
 }
 
 .headerLogoLinkWrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 
-    @media screen and (min-width: 768px) {
-        justify-content: center;
-        width: initial;
-    }
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    width: initial;
+  }
 }
 
 .headerLogoLink {
-    display: contents;
+  display: contents;
 
-    img {
-        transition: margin-left .2s ease;
-        height: 40px;
-        width: auto;
-        
-        @media screen and (min-width: 768px) {
-            height: 50px;
-        }
+  img {
+    transition: margin-left 0.2s ease;
+    height: 40px;
+    width: auto;
 
+    @media screen and (min-width: 768px) {
+      height: 50px;
     }
+  }
 }
 
 .headerLinks {
-    text-align: left;
-    padding-block: $spacingMd;
-    width: 100%;
+  text-align: left;
+  padding-block: $spacingMd;
+  width: 100%;
 
-    &:hover {
-        font-weight: $fontWeightSemiBold;
-    }
+  &:hover {
+    font-weight: $fontWeightSemiBold;
+  }
 
-    @media screen and (min-width: 768px) {
-        width: 100px;
-        text-align: center;
-    }
+  @media screen and (min-width: 768px) {
+    width: 100px;
+    text-align: center;
+  }
 }
 
 .desktopActionsWrappper {
-    @media screen and (max-width: 768px) {
-        display: none;
-    }
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
 .mobileHambugerMenuWrapper {
-    img {
-        cursor: pointer;
-    }
+  img {
+    cursor: pointer;
+  }
 
-    @media screen and (min-width: 768px) {
-        display: none;
-    }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .mobileModalWrapper {
-    padding: $spacingXl $spacing4Xl;
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 65px;
-    background: $colorLight;
-    box-shadow: 0px 16px 20px -12px rgba(0, 0, 0, 0.5);
+  padding: $spacingXl $spacing4Xl;
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 65px;
+  background: $colorLight;
+  box-shadow: 0px 16px 20px -12px rgba(0, 0, 0, 0.5);
 }
