--- a/src/app/blog/[title]/blog.module.scss
+++ b/src/app/blog/[title]/blog.module.scss
@@ -16,7 +16,8 @@
 .blogImage {
   width: 100%;
   height: auto;
-  object-fit: cover;
+  object-fit: contain;
+  max-height: 60vh;
 
   @media screen and (min-width: 768px) {
     border-radius: $borderRadiusSm;
