--- a/src/app/hakkimda/about.module.scss
+++ b/src/app/hakkimda/about.module.scss
@@ -19,7 +19,6 @@
   flex: 2;
   object-fit: cover;
   width: 100%;
-  object-position: bottom;
   max-height: 50vh;
 
   @media screen and (min-width: 768px) {
@@ -38,8 +37,12 @@
   border-radius: 30px;
 
   @media screen and (min-width: 768px) {
-    margin-top: $spacing5Xl;
     padding-inline: unset;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 0;
+    margin-top: 0;
   }
 }
 
