--- a/src/app/randevu-al/booking.module.scss
+++ b/src/app/randevu-al/booking.module.scss
@@ -12,9 +12,8 @@
 .image {
   width: 40%;
   display: none;
-  height: 800px;
+  height: auto;
   object-fit: cover;
-  object-position: left;
   border-radius: $borderRadiusMd 0 0 $borderRadiusMd;
 
   @media screen and (min-width: 768px) {
