--- a/src/components/HomePage/USP/usp.module.scss
+++ b/src/components/HomePage/USP/usp.module.scss
@@ -85,6 +85,7 @@
 .uspBody {
   margin: 0;
   font-size: $fontSizeSm;
+  text-align: justify;
 
   @media screen and (min-width: 768px) {
     font-size: $fontSizeLg;
