--- a/src/components/HomePage/AboutMe/aboutme.module.scss
+++ b/src/components/HomePage/AboutMe/aboutme.module.scss
@@ -65,7 +65,7 @@
 
 .firstText {
   margin-bottom: $spacingMd;
-  text-align: center;
+  text-align: justify;
 
   @media screen and (min-width: 768px) {
     text-align: left;
