--- a/src/app/randevu-al/booking.module.scss
+++ b/src/app/randevu-al/booking.module.scss
@@ -2,32 +2,33 @@
 
 .container {
   position: relative;
-  display: flex;
   margin-block: $spacing5Xl;
   background-color: white;
   border-radius: $borderRadiusMd;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.image {
-  width: 40%;
-  display: none;
-  height: auto;
-  object-fit: cover;
-  border-radius: $borderRadiusMd 0 0 $borderRadiusMd;
-
-  @media screen and (min-width: 768px) {
-    display: block;
-  }
-}
-
 .formContainer {
   padding: $spacingLg $spacing2Xl;
   margin-block: $spacingMd;
 
+  form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: $spacing3Xl;
+    margin-top: $spacing4Xl;
+    display: flex;
+    flex-direction: column;
+
+
+    @media screen and (min-width: 768px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
   @media screen and (min-width: 768px) {
     padding: $spacingLg $spacing4Xl;
-    width: 70%;
     margin-block: $spacingLg;
   }
 }
@@ -40,7 +41,6 @@
 }
 
 .formInputContainer {
-  margin-top: $spacing3Xl;
   display: flex;
   flex-direction: column;
   gap: $spacingSm;
@@ -56,6 +56,7 @@
   font-size: 18px;
   border: 1px solid #c1c1c1;
   width: 100%;
+  font-family: 'Noto Sans', 'Noto Sans Fallback';
 
   @media screen and (min-width: 768px) {
     border-radius: $borderRadiusMd;
@@ -70,12 +71,14 @@
   width: 100%;
 
   &::after {
-    content: "▼"; /* Arrow symbol */
+    content: "▼";
+    /* Arrow symbol */
     position: absolute;
     top: 50%;
     right: 15px;
     transform: translateY(-50%);
-    pointer-events: none; /* Prevent the arrow from blocking clicks */
+    pointer-events: none;
+    /* Prevent the arrow from blocking clicks */
     font-size: 14px;
     color: #c1c1c1;
   }
@@ -83,36 +86,83 @@
 
 /* Hide the default select arrow */
 .formSelect {
-  appearance: none; /* For most browsers */
-  -webkit-appearance: none; /* For Safari */
-  -moz-appearance: none; /* For Firefox */
+  appearance: none;
+  /* For most browsers */
+  -webkit-appearance: none;
+  /* For Safari */
+  -moz-appearance: none;
+  /* For Firefox */
   background-color: transparent;
-  border: 2px solid #c1c1c1;
-  padding: $spacingMd 16px;
+  padding: 8px 16px;
   width: 100%;
-  font-size: 20px;
   color: #333;
   cursor: pointer;
+
+
 
   &:focus {
     outline-color: -webkit-focus-ring-color;
     outline-style: auto;
     outline-width: 5px;
 
-    & + .custom-dropdown::after {
+    &+.custom-dropdown::after {
       color: #007bff;
     }
   }
 }
 
 /* Styling for when the dropdown is opened */
-.custom-select:focus + .custom-dropdown::after {
+.custom-select:focus+.custom-dropdown::after {
   color: #007bff;
+}
+
+.radioGroup {
+  display: flex;
+  height: 50px;
+  gap: $spacing4Xl;
+  padding-left: $spacingSm;
+}
+
+.radioOption {
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  font-family: 'Noto Sans', 'Noto Sans Fallback';
+
+  input {
+    height: 25px;
+    aspect-ratio: 1;
+    border: 2px solid #939393;
+    padding: 2px;
+    background: radial-gradient(farthest-side, $colorDark 94%, #0000) 50%/0 0 no-repeat content-box;
+    border-radius: 50%;
+    outline-offset: 1px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    cursor: pointer;
+    font-size: inherit;
+    transition: .3s;
+
+    &:checked {
+      border-color: $colorDark;
+      background-size: 100% 100%;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+  }
+}
+
+.gridSpanRow {
+  grid-column: 1 / 3;
 }
 
 .formInputTextArea {
   height: 150px;
-  margin-bottom: $spacing3Xl;
 }
 
 .submitButton {
