--- a/src/components/HomePage/Services/services.module.scss
+++ b/src/components/HomePage/Services/services.module.scss
@@ -10,15 +10,17 @@
 
 .servicesWrapper {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   width: 100%;
-  overflow-x: auto;
-  gap: $spacing5Xl;
+  flex-direction: column;
+  gap: $spacingSm;
+  align-items: flex-start;
 
   @media screen and (min-width: 768px) {
     justify-content: unset;
     gap: 20px;
+    flex-direction: row;
+    align-items: center;
   }
 }
 
@@ -32,16 +34,18 @@
   gap: $spacing2Xl;
   cursor: pointer;
   border-radius: $spacingSm;
+  margin-top: $spacingLg;
+  align-items: center;
 
   @media screen and (min-width: 768px) {
     padding: $spacingLg $spacingXl;
-    align-items: center;
+    margin-top: none;
   }
 }
 
 .serviceImage {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   border: 1px solid $colorNeutral;
   object-fit: cover;
@@ -57,8 +61,12 @@
   display: flex;
   flex-direction: column;
   gap: $spacingXs;
-  max-width: 300px;
+  max-width: 250px;
   width: max-content;
+
+  @media screen and (min-width: 768px) {
+    max-width: 350px;
+  }
 }
 
 .serviceBodyAction {
