--- a/src/components/HomePage/Services/services.module.scss
+++ b/src/components/HomePage/Services/services.module.scss
@@ -18,9 +18,10 @@
 
   @media screen and (min-width: 768px) {
     justify-content: unset;
-    gap: 20px;
+    gap: 0 20px;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
   }
 }
 
